resume and source notification strategy